- fix view to handle sortable column

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -3,20 +3,22 @@
 <table>
   <thead>
     <tr>
-      <th>Name</th>
-      <th>Volume</th>
-      <th>Sku</th>
-      <th>Special</th>
-      <th>Normal</th>
-      <th>Diff</th>
-      <th>Aisle</th>
-      <th>Discount</th>
+      <th><%= sortable "Index".downcase %></th>
+      <th><%= sortable "Name".downcase %></th>
+      <th><%= sortable "Volume".downcase %></th>
+      <th><%= sortable "Sku".downcase %></th>
+      <th><%= sortable "Special".downcase %></th>
+      <th><%= sortable "Normal".downcase %></th>
+      <th><%= sortable "Diff".downcase, "Difference" %></th>
+      <th><%= sortable "Aisle".downcase %></th>
+      <th><%= sortable "Discount".downcase %></th>
     </tr>
   </thead>
 
   <tbody>
     <% @products.each_with_index do |product, index| %>
       <tr>
+        <td id="index<%= index %>"><%= product.id %></td>
         <td id="name<%= index %>"><%= product.name %></td>
         <td id="volume<%= index %>"><%= product.volume %></td>
         <td id="sku<%= index %>"><%= product.sku %></td>
