--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,4 +1,6 @@
-<h1>Listing products</h1>
+<div class="row"></div>
+<div class="row">
+  <h1>Cheapest Price for Supermarket Product<br/></h1>
 
 <table>
   <thead>
