- added count up time in terms of weeks

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,6 +1,7 @@
 <div class="row"></div>
 <div class="row">
   <h1>Cheapest Price for Supermarket Product<br/></h1>
+  <h2>Since <%= ((Time.now - Time.at(1414321201)).to_i / 604800).round %> Week Ago</h2>
 
 <table>
   <thead>
