- added descriptive text to the page

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -17,6 +17,11 @@
       <th><%= sortable "Discount".downcase %></th>
     </tr>
   </thead>
+  <h5>
+  <p>With this list, you should be able to gauge an item that you are purchasing at it's lowest price.<br/>
+  You can now sort the list by any column in ascending or descending order. <br/>
+  More improvements will be added in time. </p>
+  <p>In the discount column, if the price difference is more than 30% of it's original price, it will be highlighted in green, more than 50% with yellow.</p>
 
   <tbody>
     <% @products.each_with_index do |product, index| %>
