- more descriptive text

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -39,5 +39,8 @@
     <% end %>
   </tbody>
 </table>
+  <p>If you like this compilation, please donate to<br/>
+  bitcoin address: 1JuNraU9vZyFxVqmUbTMJFFFFvzj1SHC48<br/>
+  paypal address: daniel.ltw@gmail.com</p></h5>
 
 <br>
