- added logic to differentiate singular or plural

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,6 +1,7 @@
 <div class="row"></div>
 <div class="row">
   <h1>Cheapest Price for Supermarket Product<br/></h1>
+  <h2>Since <%= @counter %> <% if(@counter == 0 or @counter == 1) %> Week <% else %> Weeks <% end %> Ago</h2>
 
   <h5>
   <p>With this list, you should be able to gauge an item that you are purchasing at it's lowest price.<br/>
