--- a/app/assets/stylesheets/products.css.scss
+++ b/app/assets/stylesheets/products.css.scss
@@ -15,3 +15,8 @@ th .asc {
 th .desc {
   background-image: url(/images/down_arrow.gif);
 }
+
+div .spacer {
+	margin-top: 10px;
+	margin-bottom: 10px;
+}
