--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,5 +1,5 @@
 <div class="row"></div>
-<div class="row" ng-app="table" ng-controller="tableCtrl">
+<div class="row">
   <h1>Cheapest Price for Supermarket Product<br/></h1>
   <h2>Since <%= @counter %> <% if(@counter == 0 or @counter == 1) %> Week <% else %> Weeks <% end %> Ago</h2>
 
