- new table for datatable

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -12,6 +12,22 @@
   <p>If you like this compilation, please donate to<br/>
   bitcoin address: 1JuNraU9vZyFxVqmUbTMJFFFFvzj1SHC48<br/>
   paypal address: daniel.ltw@gmail.com</p></h5>
+  <div class="row spacer"></div>
+  <table id="products" class="display" data-source="<%= products_url(format: "json") %>">
+    <thead>
+      <tr>
+        <th>id</th>
+        <th>name</th>
+        <th>volume</th>
+        <th>sku</th>
+        <th>special</th>
+        <th>normal</th>
+        <th>diff</th>
+        <th>aisle</th>
+        <th>discount</th>
+      </tr>
+    </thead>
+    <tbody>
     </tbody>
   </table>
 </div>
