--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -6,6 +6,7 @@
   <h5>
   <p>With this list, you should be able to gauge an item that you are purchasing at it's lowest price.<br/>
   You can now sort the list by any column in ascending or descending order. <br/>
+  Filter is added for columns name, sku and aisle. You can input in the search field to display what you are searching for. <br/>
   More improvements will be added in time. </p>
 
   <p>If you like this compilation, please donate to<br/>
