--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -6,6 +6,7 @@
   <h5>
   <p>With this list, you should be able to gauge an item that you are purchasing at it's lowest price.<br/>
   You can now sort the list by any column in ascending or descending order. <br/>
+  Filter is added for columns name, sku and aisle. You can input in the search field to display what you are searching for. <br/>
   More improvements will be added in time. </p>
   <p>In the discount column, if the price difference is more than 30% of it's original price, it will be highlighted in green, more than 50% with yellow.</p>
 
