- header looks better

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -16,15 +16,15 @@
   <table id="products" class="display" data-source="<%= products_url(format: "json") %>">
     <thead>
       <tr>
-        <th>id</th>
-        <th>name</th>
-        <th>volume</th>
-        <th>sku</th>
-        <th>special</th>
-        <th>normal</th>
-        <th>diff</th>
-        <th>aisle</th>
-        <th>discount</th>
+        <th>Id</th>
+        <th>Name</th>
+        <th>Volume</th>
+        <th>SKU</th>
+        <th>Special Price</th>
+        <th>Normal Price</th>
+        <th>Difference</th>
+        <th>Aisle</th>
+        <th>Discount</th>
       </tr>
     </thead>
     <tbody>
