- added more information

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -2,6 +2,9 @@
 <div class="row">
   <h1>Cheapest Price for Supermarket Product<br/></h1>
   <h2>Since <%= @counter %> <% if(@counter == 0 or @counter == 1) %> Week <% else %> Weeks <% end %> Ago</h2>
+  <h3>With a total of <%= @table_size %> products. </h3>
+  
+  <div class="row spacer"></div>
 
   <h5>
   <p>With this list, you should be able to gauge an item that you are purchasing at it's lowest price.<br/>
