- test to fix asset issue

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -14,6 +14,7 @@
  *= products.css.scss
  *= require dataTables/src/demo_table_jui
  *= require dataTables/bootstrap/3/jquery.dataTables.bootstrap
+ *= require_tree ./dataTables
  *= require_self
  */
 
