added colour set green and yellow

--- a/app/assets/stylesheets/products.css.scss
+++ b/app/assets/stylesheets/products.css.scss
@@ -2,6 +2,9 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+$green: rgb(0,255,0);
+$yellow: rgb(255,255,0);
+
 th .current {
   padding-right: 12px;
   background-repeat: no-repeat;
