added highlights for both yellow and green

--- a/app/assets/stylesheets/products.css.scss
+++ b/app/assets/stylesheets/products.css.scss
@@ -23,3 +23,11 @@ div .spacer {
 	margin-top: 10px;
 	margin-bottom: 10px;
 }
+
+td.highlight-green {
+  background: $green;
+}
+
+td.highlight-yellow {
+  background: $yellow;
+}
