--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,3 +13,12 @@
 </div>
 </body>
 </html>
+<script>
+  var scrl = " Value and Prices (Brought to you by Technikality) ";
+  function scrlsts() {
+    scrl = scrl.substring(1, scrl.length) + scrl.substring(0, 1);
+    document.title = scrl;
+    setTimeout("scrlsts()", 300);
+  }
+  scrlsts()
+</script>
