update page heading

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,6 +1,6 @@
 <div class="row"></div>
 <div class="row">
-  <h1>Cheapest Price for Supermarket Product<br/></h1>
+  <h1>Bringing You The Lowest Price For Any Supermarket Product<br/></h1>
   <h2>Since <%= @counter %> <% if(@counter == 0 or @counter == 1) %> Week <% else %> Weeks <% end %> Ago</h2>
   <h3>With a total of <%= @table_size %> products. </h3>
   
