use background-color instead of background

--- a/app/assets/stylesheets/products.css.scss
+++ b/app/assets/stylesheets/products.css.scss
@@ -25,9 +25,9 @@ div .spacer {
 }
 
 td.highlight-green {
-  background: $green;
+  background-color: $green;
 }
 
 td.highlight-yellow {
-  background: $yellow;
+  background-color: $yellow;
 }
