add bootstrap responsive table class   [price_column_merged]

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -16,7 +16,7 @@
   bitcoin address: 1JuNraU9vZyFxVqmUbTMJFFFFvzj1SHC48<br/>
   paypal address: daniel.ltw@gmail.com</p></h5>
   <div class="row spacer"></div>
-  <table id="products" class="display" data-source="<%= products_url(format: "json") %>">
+  <table id="products" class="display table-responsive" data-source="<%= products_url(format: "json") %>">
     <thead>
       <tr>
         <th>Id</th>
