headers for 3 columns merged into one   [price_column_merged]

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -23,9 +23,7 @@
         <th>Name</th>
         <th>Volume</th>
         <th>SKU</th>
-        <th>Special Price</th>
-        <th>Normal Price</th>
-        <th>Difference</th>
+        <th>Prices (NZ$)</th>
         <th>Aisle</th>
         <th>Discount</th>
       </tr>
