- highchart on product show view

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -40,4 +40,8 @@
   <%= @product.discount %>
 </p>
 
+<div>
+  <%= high_chart("highchart", @chart) %>
+</div>
+
 <%= link_to 'Back', products_path %>
