- render basic chart paritial

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -40,8 +40,6 @@
   <%= @product.discount %>
 </p>
 
-<div>
-  <%= high_chart("highchart", @chart) %>
-</div>
+<%= render partial: 'basic_chart' %>
 
 <%= link_to 'Back', products_path %>
