- format discount to 3 decimal place

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -37,7 +37,7 @@
 
 <p>
   <strong>Discount:</strong>
-  <%= @product.discount %>
+  <%= number_to_percentage(@product.discount * 100, precision: 3) %>
 </p>
 
 <%= render partial: 'basic_chart' %>
