- view column styling

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -29,7 +29,9 @@
           <th class='all'>Name</th>
           <th class='not-mobile'>Volume</th>
           <th class='min-tablet-l'>SKU</th>
-          <th class='all'>Prices (NZ$)</th>
+          <th class='all'>Special Prices (NZ$)</th>
+          <th class='not-mobile'>Normal Prices (NZ$)</th>
+          <th class='all'>Variance (NZ$)</th>
           <th class='desktop'>Aisle</th>
           <th class='all'>Discount</th>
         </tr>
