- hide variance on certain device

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -31,7 +31,7 @@
           <th class='min-tablet-l'>SKU</th>
           <th class='all'>Special Prices (NZ$)</th>
           <th class='not-mobile'>Normal Prices (NZ$)</th>
-          <th class='all'>Variance (NZ$)</th>
+          <th class='min-tablet-l'>Variance (NZ$)</th>
           <th class='desktop'>Aisle</th>
           <th class='all'>Discount</th>
         </tr>
