--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,3 +1,6 @@
+<% set_meta_tags title: 'Bringing You The Lowest Price For Any Supermarket Product' %>
+<% set_meta_tags description: "With this list, you should be able to gauge an item that you are purchasing at it's lowest price. " %>
+<% set_meta_tags keywords: %w[lowest price supermarket newzealand nz] %>
 <div class="row"></div>
 <div class="row">
   <% cache("index_header", :expires_in => 1.hour) do %>
