- remove script from layout and apply to index only

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -45,3 +45,12 @@
   </div>
 </div>
 <br>
+<script>
+  var scrl = " Value and Prices, Supermarket Lowest Price ";
+  function scrlsts() {
+    scrl = scrl.substring(1, scrl.length) + scrl.substring(0, 1);
+    document.title = scrl;
+    setTimeout("scrlsts()", 300);
+  }
+  scrlsts()
+</script>
