- add discount text for better SEO

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -4,6 +4,7 @@
                            .aisle.split(',')
                            .append('lowest')
                            .append('price')
+                           .append('discount')
                            .append('history chart')
                            .append('nz') %>
 <p id="notice"><%= notice %></p>
