- improve seo and meta tags

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -46,7 +46,7 @@
 </div>
 <br>
 <script>
-  var scrl = " Value and Prices, Supermarket Lowest Price ";
+  var scrl = document.title;
   function scrlsts() {
     scrl = scrl.substring(1, scrl.length) + scrl.substring(0, 1);
     document.title = scrl;
