--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,7 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+  <meta name="msvalidate.01" content="ED45BEC03A86C72E1E284075EA82A833" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
