- use assets from the various cdn

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -52,6 +52,9 @@
   <%= number_to_percentage(@product.discount * 100, precision: 3) %>
 </p>
 
-<%= render partial: 'basic_chart' %>
+<%= render partial: 'basic_chart', locals: { prices: @prices_history } %>
+
+<%= javascript_include_tag 'https://code.highcharts.com/highcharts.js', 'data-turbolinks-track' => true %>
+<%= javascript_include_tag 'https://code.highcharts.com/highcharts-more.js', 'data-turbolinks-track' => true %>
 
 <%= link_to 'Back', :back %>
