- chart rename and new chart

--- a/app/views/products/_basic_chart.html.erb
+++ b/app/views/products/_basic_chart.html.erb
@@ -14,7 +14,7 @@ $(function () {
       enabled: true,
     },
     title: {
-      text: "Price History of " + <%= raw @product.name.to_json %>,
+      text: "Price History",
     },
     subtitle: {
       text: document.ontouchstart === undefined ?
