- apply bootstrap styling

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -26,7 +26,7 @@
     </div>
   <% end %>
   <div class="col-xs-12">
-    <table id="products" class="display responsive" data-source="<%= products_url(format: "json") %>" width='100%'>
+    <table id="products" class="table table-bordered table-striped table-condensed display responsive" data-source="<%= products_url(format: "json") %>" width='100%'>
       <thead>
         <tr>
           <th class='all'>Name</th>
