--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,15 +2,15 @@
 <html>
 <head>
   <%= display_meta_tags site: 'Supermarket Lowest Price' %>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <%= stylesheet_link_tag    :application, media: 'all', 'data-turbolinks-track' => true %>
+  <%= javascript_include_tag :application, 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
   <meta name="msvalidate.01" content="ED45BEC03A86C72E1E284075EA82A833" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-<div class="container">
 <%= render 'peek/bar' %>
+<div class="container">
 <%= yield %>
 </div>
 </body>
