- attempt to fix chart height

--- a/app/views/products/_basic_chart.html.erb
+++ b/app/views/products/_basic_chart.html.erb
@@ -80,4 +80,4 @@ $(function () {
   });
 });
 </script>
-<div id='basic-chart' class="col-md-12"></div>
+<div id='basic-chart' class="col-md-12 chart"></div>
