--- a/app/views/products/_day_of_week_chart.html.erb
+++ b/app/views/products/_day_of_week_chart.html.erb
@@ -88,4 +88,4 @@ $(function () {
   });
 });
 </script>
-<div id='day-of-week-chart' class="col-md-6"></div>
+<div id='day-of-week-chart' class="col-md-6 chart"></div>
