--- a/app/views/products/_month_of_year_chart.html.erb
+++ b/app/views/products/_month_of_year_chart.html.erb
@@ -88,4 +88,4 @@ $(function () {
   });
 });
 </script>
-<div id='month-of-year-chart' class="col-md-6"></div>
+<div id='month-of-year-chart' class="col-md-6 chart"></div>
