- try to work out height of chart containers, use 100% on chart settings

--- a/app/views/products/_day_of_week_chart.html.erb
+++ b/app/views/products/_day_of_week_chart.html.erb
@@ -5,7 +5,8 @@ $(function () {
   $('#day-of-week-chart').highcharts({
     chart: {
       type: 'scatter',
-      zoomType: 'xy'
+      zoomType: 'xy',
+      height: '100%'
     },
     credits: {
       enabled: false,
