--- a/app/views/products/_month_of_year_chart.html.erb
+++ b/app/views/products/_month_of_year_chart.html.erb
@@ -5,7 +5,8 @@ $(function () {
   $('#month-of-year-chart').highcharts({
     chart: {
       type: 'scatter',
-      zoomType: 'xy'
+      zoomType: 'xy',
+      height: '100%'
     },
     credits: {
       enabled: false,
