--- a/app/views/products/_basic_chart.html.erb
+++ b/app/views/products/_basic_chart.html.erb
@@ -5,7 +5,8 @@ $(function () {
   $('#basic-chart').highcharts({
     chart: {
       type: 'line',
-      zoomType: 'x'
+      zoomType: 'x',
+      height: '100%'
     },
     credits: {
       enabled: false,
